--- a/analysis/imputestratergy.Rmd
+++ b/analysis/imputestratergy.Rmd
@@ -105,7 +105,9 @@ saveRDS(results, "./results.rds")
 ```
 
 
-
+```{r}
+results = readRDS("../data/missingvalue/imputescheme/results.rds")
+boxplot(results)
 ```
 
 
